Add: internal navigation links to webpage
- Implemented anchor tags with href attributes pointing to specific sections of the webpage.
- Added corresponding IDs to the target elements for 'About GreenSynch', 'Features', and 'Pre-Order' sections.
- Ensured smooth navigation within the page by matching the href attributes in the navigation links with the IDs of the target elements.

--- a/index.html
+++ b/index.html
@@ -16,9 +16,9 @@
           </div>          
         <div class="nav-toggle" onclick="toggleMenu()">☰</div>
         <div class="nav-items">
-          <a href="#" class="nav-item">Home</a>
-          <a href="#" class="nav-item">Features</a>
-          <a href="#" class="nav-item">Contact</a>
+          <a href="#about" class="nav-item">About GreenSynch</a>
+          <a href="#features" class="nav-item">Features</a>
+          <a href="#order" class="nav-item">Pre-Order</a>
         </div>
       </nav>
     
@@ -38,7 +38,7 @@
               eco-aware individual.</h3>
             </section>
             <!-- Section 1 -->
-            <section>
+            <section id="about">
               <h4>Sustainable Lifestyle</h4>
               <h2>Symbolises a commitment to sustainability and reducing environmental impact.</h2>
             </section>
@@ -54,7 +54,7 @@
               <img src="img/health.jpg" alt="Descriptive Text">
             </div>
              <!-- Accordion -->
-             <div class="accordion-container">
+             <div class="accordion-container" id="features">
             <div class="accordion">
               <div class="accordion-item">
                 <button class="accordion-header">
@@ -125,7 +125,7 @@
       </div>
       <!-- Pre-order -->
       <section>
-        <div class="container">
+        <div class="container" id="order">
           <h4 class="heading-preorder">Pre-order</h4>
           <h2 class="heading-title">GreenSynch</h2>
           <div class="image-column">
