Add SEO and Open Graph Meta Tags to GreenSync Webpage
- Included meta tags for description, keywords, author, and robots to improve SEO.
- Added Open Graph meta tags to enhance the webpage's presentation on social media platforms.
- The meta tags provide a succinct overview of GreenSync's eco-friendly smartwatch and its features.
- Updated the webpage title to 'GreenSync - Eco-Friendly Smartwatch' for better brand recognition.

--- a/index.html
+++ b/index.html
@@ -8,6 +8,16 @@
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
         <!-- CSS here -->
         <link rel="stylesheet" href="css/styles.css">
+        <!-- Meta tags -->
+        <meta name="description" content="GreenSync - Revolutionizing timekeeping with our eco-friendly smartwatch. Embrace sustainability and advanced technology for a healthier lifestyle and planet.">
+        <meta name="keywords" content="GreenSync, Eco-Friendly, Smartwatch, Sustainability, Health Tracking, Technology, Environmentally Conscious, Renewable Energy">
+        <meta name="author" content="Igor Dinuzzi">
+        <meta name="robots" content="index, follow">
+        <meta property="og:title" content="GreenSync - Eco-Friendly Smartwatch">
+        <meta property="og:description" content="Discover GreenSync, the smartwatch that combines cutting-edge technology with eco-friendly design. A step towards a sustainable future.">
+        <meta property="og:url" content="https://igordinuzzi.github.io/greensynch/">
+        <meta property="og:type" content="website">
+        <meta property="og:site_name" content="GreenSync">
 </head>
 <body>
     <nav class="navbar">
