--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
         <!-- CSS here -->
         <link rel="stylesheet" href="css/styles.css">
+        <link rel="icon" href="img/favicon/favicon.ico" type="image/x-icon">
         <!-- Meta tags -->
         <meta name="description" content="GreenSync - Revolutionizing timekeeping with our eco-friendly smartwatch. Embrace sustainability and advanced technology for a healthier lifestyle and planet.">
         <meta name="keywords" content="GreenSync, Eco-Friendly, Smartwatch, Sustainability, Health Tracking, Technology, Environmentally Conscious, Renewable Energy">
