--- a/index.html
+++ b/index.html
@@ -174,6 +174,7 @@
         </div>
       </div>
   </main>
+     <a href="#" class="back-to-top">↑ Top</a>
   <footer class="footer">
     <div class="footer-column">
         <img src="img/logo.svg" alt="Logo">
