Improve Website Accessibility with ARIA Labels
- Added ARIA labels to the main navigation, toggle button, navigation links, back-to-top button, footer, and terms section.
- These labels provide better context and descriptions for users with assistive technologies.
- Enhanced overall web accessibility, making the site more inclusive and user-friendly for all visitors.

--- a/index.html
+++ b/index.html
@@ -21,17 +21,17 @@
         <meta property="og:site_name" content="GreenSync">
 </head>
 <body>
-    <nav class="navbar">
+    <nav class="navbar" aria-label="Main navigation">
         <div class="logo">
-            <img src="img/logo.svg" alt="GreenSync Logo" />
-          </div>          
-        <div class="nav-toggle" onclick="toggleMenu()">☰</div>
+            <img src="img/logo.svg" alt="GreenSync Logo"/>
+        </div>          
+        <button class="nav-toggle" aria-label="Toggle navigation" onclick="toggleMenu()">☰</button>
         <div class="nav-items">
-          <a href="#about" class="nav-item">About GreenSynch</a>
-          <a href="#features" class="nav-item">Features</a>
-          <a href="#order" class="nav-item">Pre-Order</a>
+          <a href="#about" class="nav-item" aria-label="About GreenSync">About GreenSynch</a>
+          <a href="#features" class="nav-item" aria-label="Features of GreenSync">Features</a>
+          <a href="#order" class="nav-item" aria-label="Pre-Order GreenSync">Pre-Order</a>
         </div>
-      </nav>
+    </nav>
     
     <main>
               <!-- hero -->
@@ -174,8 +174,8 @@
         </div>
       </div>
   </main>
-     <a href="#" class="back-to-top">↑ Top</a>
-  <footer class="footer">
+     <a href="#" class="back-to-top" aria-label="Back to top of the page">↑ Top</a>
+  <footer class="footer" aria-label="Footer">
     <div class="footer-column">
         <img src="img/logo.svg" alt="Logo">
     </div>
@@ -204,11 +204,11 @@
         </p>
     </div>
 </footer>
-<div class="terms">
+<div class="terms" aria-label="Terms and Conditions">
     <p>
         The information contained in this website is for general information purposes only. The information is provided by GreenSync Technologies AG and while we endeavor to keep the information up to date and correct, we make no representations or warranties of any kind, express or implied, about the completeness, accuracy, reliability, suitability or availability with respect to the website or the information, products, services, or related graphics contained on the website for any purpose. Any reliance you place on such information is therefore strictly at your own risk.<br><br>
         Copyright © 2023 GreenSync Technologies AG. All rights reserved. All content and graphics on this site are the property of GreenSync Technologies AG unless otherwise stated.
-        <a href="https://github.com/igordinuzzi" target="_blank">Made by Igor</a> 
+        <a href="https://github.com/igordinuzzi" target="_blank" aria-label="Visit Igor's GitHub profile">Made by Igor</a> 
       </p>
 </div>
   <!-- Script -->
