Add Descriptive Alt Tags to Images for Improved Accessibility
- Introduced descriptive alt tags to all images, including the GreenSync logo, sustainable lifestyle and health feature images, gallery images, and the product image in the pre-order section.
- Each alt tag is carefully crafted to accurately describe the content and context of the images.
- Enhanced the accessibility of the website for users relying on screen readers, making the site more inclusive and user-friendly.

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 <body>
     <nav class="navbar" aria-label="Main navigation">
         <div class="logo">
-            <img src="img/logo.svg" alt="GreenSync Logo"/>
+            <img src="img/logo.svg" alt="GreenSync Smartwatch Logo"/>
         </div>          
         <button class="nav-toggle" aria-label="Toggle navigation" onclick="toggleMenu()">☰</button>
         <div class="nav-items">
@@ -54,7 +54,7 @@
               <h2>Symbolises a commitment to sustainability and reducing environmental impact.</h2>
             </section>
             <div class="full-width-image">
-              <img src="img/sustainable.jpg" alt="Descriptive Text">
+              <img src="img/sustainable.jpg" alt="Visual showcasing sustainable lifestyle features of GreenSync Smartwatch">
             </div>
             <!-- Section 2 -->
             <section>
@@ -62,7 +62,7 @@
               <h2>Ideal for enhancing health and fitness with its comprehensive tracking features.</h2>
             </section>
             <div class="full-width-image">
-              <img src="img/health.jpg" alt="Descriptive Text">
+              <img src="img/health.jpg" alt="Illustration of health and fitness tracking capabilities of GreenSync Smartwatch">
             </div>
              <!-- Accordion -->
              <div class="accordion-container" id="features">
@@ -118,13 +118,13 @@
            <div class="gallery-container">
             <button id="prevBtn"><i class="fa-solid fa-arrow-left"></i></button>
             <div class="gallery">
-                <img src="img/gallery/gallery1.jpg" alt="Image 1">
-                <img src="img/gallery/gallery2.jpg" alt="Image 2">
-                <img src="img/gallery/gallery3.jpg" alt="Image 1">
-                <img src="img/gallery/gallery4.jpg" alt="Image 2">
-                <img src="img/gallery/gallery5.jpg" alt="Image 2">
-                <img src="img/gallery/gallery6.jpg" alt="Image 1">
-                <img src="img/gallery/gallery7.jpg" alt="Image 2">
+                <img src="img/gallery/gallery1.jpg" alt="GreenSync Smartwatch worn on a wrist">
+                <img src="img/gallery/gallery2.jpg" alt="GreenSync Smartwatch worn on a wrist">
+                <img src="img/gallery/gallery3.jpg" alt="GreenSync Smartwatch while sleeping">
+                <img src="img/gallery/gallery4.jpg" alt="GreenSync Smartwatch while biking">
+                <img src="img/gallery/gallery5.jpg" alt="GreenSync Smartwatch while swimming">
+                <img src="img/gallery/gallery6.jpg" alt="GreenSync Smartwatch while cooking">
+                <img src="img/gallery/gallery7.jpg" alt="GreenSync Smartwatch in a meeting">
                
             </div>
             <button id="nextBtn"><i class="fa-solid fa-arrow-right"></i></button>
@@ -177,7 +177,7 @@
      <a href="#" class="back-to-top" aria-label="Back to top of the page">↑ Top</a>
   <footer class="footer" aria-label="Footer">
     <div class="footer-column">
-        <img src="img/logo.svg" alt="Logo">
+        <img src="img/logo.svg" alt="GreenSync Smartwatch Logo">
     </div>
     <div class="footer-column">
         <!-- FontAwesome icons for social media -->
