--- a/index.html
+++ b/index.html
@@ -181,10 +181,20 @@
     </div>
     <div class="footer-column">
         <!-- FontAwesome icons for social media -->
-        <i class="fab fa-facebook"></i>
-        <i class="fab fa-twitter"></i>
-        <i class="fab fa-instagram"></i>
-        <!-- Add more social media icons as needed -->
+        <!-- Facebook Link -->
+<a href="https://www.facebook.com" target="_blank" aria-label="Follow us on Facebook">
+    <i class="fab fa-facebook"></i>
+</a>
+
+<!-- Twitter Link -->
+<a href="https://www.twitter.com" target="_blank" aria-label="Follow us on Twitter">
+    <i class="fab fa-twitter"></i>
+</a>
+
+<!-- Instagram Link -->
+<a href="https://www.instagram.com" target="_blank" aria-label="Follow us on Instagram">
+    <i class="fab fa-instagram"></i>
+</a>
     </div>
     <div class="footer-column">
         <p>
