--- a/index.html
+++ b/index.html
@@ -225,6 +225,7 @@
   <script src="js/script.js"></script>
   <script src="js/countdown.js"></script>
   <script src="js/form.js"></script>
+  <script src="js/top.js"></script>
 
 
 </body>
