Update the URL for images

--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
               <h2>Symbolises a commitment to sustainability and reducing environmental impact.</h2>
             </section>
             <div class="full-width-image">
-              <img src="img/sustainable.jpg" alt="Visual showcasing sustainable lifestyle features of GreenSync Smartwatch">
+              <img src="img/landing/sustainable.jpg" alt="Visual showcasing sustainable lifestyle features of GreenSync Smartwatch">
             </div>
             <!-- Section 2 -->
             <section>
@@ -62,7 +62,7 @@
               <h2>Ideal for enhancing health and fitness with its comprehensive tracking features.</h2>
             </section>
             <div class="full-width-image">
-              <img src="img/health.jpg" alt="Illustration of health and fitness tracking capabilities of GreenSync Smartwatch">
+              <img src="img/landing/health.jpg" alt="Illustration of health and fitness tracking capabilities of GreenSync Smartwatch">
             </div>
              <!-- Accordion -->
              <div class="accordion-container" id="features">
