Update the URL for logo

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 <body>
     <nav class="navbar" aria-label="Main navigation">
         <div class="logo">
-            <img src="img/logo.svg" alt="GreenSync Smartwatch Logo"/>
+            <img src="img/logo/logo.svg" alt="GreenSync Smartwatch Logo"/>
         </div>          
         <button class="nav-toggle" aria-label="Toggle navigation" onclick="toggleMenu()">☰</button>
         <div class="nav-items">
@@ -177,7 +177,7 @@
      <a href="#" class="back-to-top" aria-label="Back to top of the page">↑ Top</a>
   <footer class="footer" aria-label="Footer">
     <div class="footer-column">
-        <img src="img/logo.svg" alt="GreenSync Smartwatch Logo">
+        <img src="img/logo/logo.svg" alt="GreenSync Smartwatch Logo">
     </div>
     <div class="footer-column">
         <!-- FontAwesome icons for social media -->
