fix: HTML for Social Media Icons
This commit updates the HTML structure for social media icons to ensure proper application of CSS styles. Key changes include:

1. Correcting the class attribute usage for the Facebook icon link. Previously, there were two separate class attributes, which has been consolidated into one. The <i> element for the Facebook icon now correctly includes both 'fab fa-facebook' and 'social-links' classes within a single class attribute.

2. Standardizing the class attribute structure across all social media icon links to ensure consistency and proper style application. This involves ensuring that all social media <i> elements (Facebook, Twitter, Instagram) have a uniform and correct class attribute setup.

These modifications are essential for the correct application of CSS styling rules, especially for hover effects, and enhance the overall maintainability of the code.

--- a/index.html
+++ b/index.html
@@ -183,17 +183,17 @@
         <!-- FontAwesome icons for social media -->
         <!-- Facebook Link -->
 <a href="https://www.facebook.com" target="_blank" aria-label="Follow us on Facebook">
-    <i class="fab fa-facebook"></i>
+      <i class="fa-brands fa-facebook-f social-links"></i>
 </a>
 
 <!-- Twitter Link -->
 <a href="https://www.twitter.com" target="_blank" aria-label="Follow us on Twitter">
-    <i class="fab fa-twitter"></i>
+  <i class="fa-brands fa-twitter social-links"></i>
 </a>
 
 <!-- Instagram Link -->
 <a href="https://www.instagram.com" target="_blank" aria-label="Follow us on Instagram">
-    <i class="fab fa-instagram"></i>
+  <i class="fa-brands fa-instagram social-links"></i>
 </a>
     </div>
     <div class="footer-column">
