--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
             <div class="accordion">
               <div class="accordion-item">
                 <button class="accordion-header">
-                  <h3><i class="fa-regular fa-heart"></i> Sustainable Lifestyle</h3>
+                  <span><i class="fa-regular fa-heart"></i> Sustainable Lifestyle</span>
                   <span class="arrow"><i class="fa-solid fa-arrow-down"></i></span>
                 </button>
                 <div class="accordion-content">
@@ -78,7 +78,7 @@
               </div>
               <div class="accordion-item">
                 <button class="accordion-header">
-                  <h3><i class="fa-solid fa-plus"></i> Health Consciousness</h3>
+                  <span><i class="fa-solid fa-plus"></i> Health Consciousness</span>
                   <span class="arrow"><i class="fa-solid fa-arrow-down"></i></span>
                 </button>
                 <div class="accordion-content">
@@ -87,7 +87,7 @@
               </div>
               <div class="accordion-item">
                 <button class="accordion-header">
-                  <h3><i class="fa-solid fa-circle-notch"></i> Tech-Savvy Convenience</h3>
+                  <span><i class="fa-solid fa-circle-notch"></i> Tech-Savvy Convenience</span>
                   <span class="arrow"><i class="fa-solid fa-arrow-down"></i></span>
                 </button>
                 <div class="accordion-content">
@@ -96,7 +96,7 @@
               </div>
               <div class="accordion-item">
                 <button class="accordion-header">
-                  <h3><i class="fa-regular fa-moon"></i> Sleep Quality Improvement</h3>
+                  <span><i class="fa-regular fa-moon"></i> Sleep Quality Improvement</span>
                   <span class="arrow"><i class="fa-solid fa-arrow-down"></i></span>
                 </button>
                 <div class="accordion-content">
@@ -105,7 +105,7 @@
               </div>
               <div class="accordion-item">
                 <button class="accordion-header">
-                  <h3><i class="fa-brands fa-pagelines"></i> Eco-Friendly Awareness</h3>
+                  <span><i class="fa-brands fa-pagelines"></i> Eco-Friendly Awareness</span>
                   <span class="arrow"><i class="fa-solid fa-arrow-down"></i></span>
                 </button>
                 <div class="accordion-content">
