Remove ARIA label from terms for improved accessibility compliance

--- a/index.html
+++ b/index.html
@@ -214,7 +214,7 @@
         </p>
     </div>
 </footer>
-<div class="terms" aria-labelledby="termsHeading">
+<div class="terms">
     <p>
         The information contained in this website is for general information purposes only. The information is provided by GreenSync Technologies AG and while we endeavor to keep the information up to date and correct, we make no representations or warranties of any kind, express or implied, about the completeness, accuracy, reliability, suitability or availability with respect to the website or the information, products, services, or related graphics contained on the website for any purpose. Any reliance you place on such information is therefore strictly at your own risk.<br><br>
         Copyright © 2023 GreenSync Technologies AG. All rights reserved. All content and graphics on this site are the property of GreenSync Technologies AG unless otherwise stated.
