--- a/index.html
+++ b/index.html
@@ -132,7 +132,7 @@
         <!-- Countdown -->
         <div class="countdown-container">
           <h2>Launch Countdown</h2>
-          <h3 id="countdown" aria-hidden="true"></h3>
+          <div id="countdown" aria-hidden="true"></div>
       </div>
       <!-- Pre-order -->
       <section>
