delete accordion content class

--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
             <div class="accordion">
               <div class="accordion-item">
                 <button class="accordion-header">
-                  <span class="accordion-content"><i class="fa-regular fa-heart"></i> Sustainable Lifestyle</span>
+                  <span><i class="fa-regular fa-heart"></i> Sustainable Lifestyle</span>
                   <span class="arrow"><i class="fa-solid fa-arrow-down"></i></span>
                 </button>
                 <div class="accordion-content">
