Add button aria label for the gallery

--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
           </div>
            <!-- Gallery -->
            <div class="gallery-container">
-            <button id="prevBtn"><i class="fa-solid fa-arrow-left"></i></button>
+            <button id="prevBtn" aria-label="Previous"><i class="fa-solid fa-arrow-left"></i></button>
             <div class="gallery">
                 <img src="img/gallery/gallery1.jpg" alt="GreenSync Smartwatch worn on a wrist">
                 <img src="img/gallery/gallery2.jpg" alt="GreenSync Smartwatch worn on a wrist">
@@ -127,7 +127,7 @@
                 <img src="img/gallery/gallery7.jpg" alt="GreenSync Smartwatch in a meeting">
                
             </div>
-            <button id="nextBtn"><i class="fa-solid fa-arrow-right"></i></button>
+            <button id="nextBtn" aria-label="Next"><i class="fa-solid fa-arrow-right"></i></button>
         </div>
         <!-- Countdown -->
         <div class="countdown-container">
